# humanornot

./: .gitignore  Readme.md  main.py  pyproject.toml  requirements.txt
chat_data/: 1_20240619_155253.json  1_20240620_133247.json  1_20240620_134402.json  2_20240620_133413.json  2_20240620_134509.json  3_20240620_134450.json
models/: chat.py
results/: results.json
services/: ai.py  assignuser.py  chat.py  chat_page.py  chatend.py  endpointfactory.py  message.py  prompt.py  results.py  timer.py
